--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Foodie. Individual project 2. Madzhunova Anelya. DHT-2-19</string>
     <string name="foodie">Foodie</string>
+    <string name="login">Регистрация</string>
+    <string name="name">Имя</string>
+    <string name="mobile">Номер</string>
+    <string name="password">Пароль</string>
+    <string name="login2">Зарегистрироваться</string>
 </resources>
