--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="itpiz">ItPiz</string>
     <string name="_35_40">35-40 мин</string>
     <string name="the_popular_sale">ХИТ ПРОДАЖ</string>
+    <string name="pizza1">ПИЦЦА</string>
 </resources>
