7th frame: the order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="text4">ОБЯЗАТЕЛЬНО</string>
     <string name="pepperoni_30_size">“Пепперони” традиционное тесто (30 см.)</string>
     <string name="_170">+170 сом</string>
+    <string name="text5">Оплата заказа</string>
 </resources>
